# ChangeLog for dev-libs/uthash
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> +metadata.xml,
  +uthash-1.2.ebuild:
  New Ebuild for bug 205911
