@@ -1,4 +1,4 @@
 DIST uthash-1.2.tar.bz2 74865 RMD160 9322c7fa8902d2934fd949d9215522cd913ce69e SHA1 5faf5da28be9d80fb2a4229cb9826a2e2883c528 SHA256 f54be435c82313bac1aca52fdbfcce759c38b4bd9d42fe83a80b414c5fed2919
-EBUILD uthash-1.2.ebuild 674 RMD160 99897e1211fa4c482f45774ff042629994722110 SHA1 74838d568a774915cf4a4fa48eec9289af60ce16 SHA256 72b84bf17cadbffef4a2385671a2b823e3121e89949d55f7e3eb9bdd86352773
-MISC ChangeLog 238 RMD160 09e88389eefde55c5f69f05977e40186ab95cdb2 SHA1 22399ac6ebf5e82d1faae1920fda98ec6d481123 SHA256 615b73a5923346dd534549f5fa69ca667647e839a2c083622a64ed2e7f0a52c5
+EBUILD uthash-1.2-r1.ebuild 679 RMD160 4fefda677a0f4e3600b2db53270d2bc1732f10df SHA1 fe3c480a1e541cb7a04c9bd1a3f22e593b22711c SHA256 f728d54d94336b34b6bb7f2f6cb577776412b2ce9579a7f5d50c119725cbf753
+MISC ChangeLog 426 RMD160 08c3bd169ba061d61b023ac864843df61d2dc7d5 SHA1 8ec674b1c5a970228b80909c74c9f8cd50091323 SHA256 71a307425cd7b24894f2e77e4f56f41b2d3be45e21379d3fd6aba9330220225a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
