@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -uthash-1.2.ebuild,
+  +uthash-1.2-r1.ebuild:
+  perl is needed on the test phase, install the txt instead of the html,
+  remove old
+
   15 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> +metadata.xml,
   +uthash-1.2.ebuild:
   New Ebuild for bug 205911
